feat: can now pass JVMArgs to the EntryPoint (Fix #26)